[package]
name = "heckbert_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glm = "0.2.3"

[dev-dependencies]
criterion = "0.4.0"
itertools = "0.10.5"

[[bench]]
name = "depth-bench"
harness = false
